--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.3",
         "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
